# framework.multimedia.media-server

./: Makefile.am  configure.ac  media-server.manifest  project.config
lib/: media-util-db.c  media-util-ipc.c  media-util-noti.c  media-util-register.c
lib/include/: media-server-ipc.h  media-util-db.h  media-util-dbg.h  media-util-err.h  media-util-internal.h  media-util-ipc.h  media-util-noti-common.h  media-util-noti.h  media-util-register.h  media-util.h
mobile/: media-server.manifest
packaging/: media-scanner.service.wearable  media-server.service  media-server.service.mobile  media-server.service.wearable  media-server.spec
src/: mediadb-update.c
src/common/: media-common-db-svc.c  media-common-external-storage.c  media-common-security.c  media-common-system.c  media-common-utils.c
src/common/include/: media-common-db-svc.h  media-common-dbg.h  media-common-external-storage.h  media-common-security.h  media-common-system.h  media-common-types.h  media-common-utils.h
src/scanner/: media-scanner-db-svc.c  media-scanner-scan.c  media-scanner-socket.c  media-scanner.c
src/scanner-v2/: media-scanner-extract-v2.c  media-scanner-scan-v2.c  media-scanner-v2.c
src/scanner-v2/include/: media-scanner-extract-v2.h
src/scanner/include/: media-scanner-db-svc.h  media-scanner-dbg.h
src/server/: media-server-db-svc.c  media-server-db.c  media-server-device-block.c  media-server-main.c  media-server-scanner.c  media-server-socket.c  media-server-thumb.c
src/server/include/: media-server-db-svc.h  media-server-dbg.h  media-server-socket.h  media-server-thumb.h
wearable/: media-server.manifest
